# Mailing-Service

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yaml  entrypoint.sh  env.example  pyproject.toml
.github/workflows/: ci.yaml
data/: sample.xlsx
docker/: .dockerignore  Dockerfile
mailing_service/mailing_service/: celery.py  settings.py  settings_test.py  urls.py
mailing_service/mailings/: admin.py  models.py
mailing_service/mailings/management/commands/: import_mailings.py
mailing_service/mailings/migrations/: 0001_initial.py
mailing_service/mailings/services/: email.py  importer.py
mailing_service/mailings/tests/: conftest.py  factories.py  test_command.py  test_importer.py  test_models.py  test_tasks.py
